# anychat

./: .editorconfig  .gitignore  .prettierignore  AGENTS.md  LICENSE  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  vitest.config.ts
.github/workflows/: auto-tag.yml  release.yml
.sisyphus/plans/: 001-data-capture-execution-checklist.md  001-data-capture-implementation.md  002-chatgpt-api-research.md  003-data-capture-research.md  003-plan-a-mitm-proxy.md  003-plan-b-electron.md  003-task-tracker.md  anychat-implementation-plan.md  chat-box-app-implementation-plan.md  code-examples.md
docs/: 2026-01-20 研究报告gemini.md  2026-01-20研究分析报告.md  README.md  data-capture-implementation-report.md  报告2.md  报告3.md  调研报告.md
docs/plans/: 2026-01-28-anychat-triage.md  2026-01-30-qianwen-links-icons-design.md  2026-01-30-qianwen-links-icons.md  2026-01-30-release-cache-design.md  2026-01-30-release-cache.md  2026-03-24-remove-data-management-implementation.md  2026-03-24-remove-legacy-capture-plumbing.md  2026-03-25-post-cleanup-sweep.md
scripts/ci/: next-version.mjs
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  remote-access.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AddServiceDialog.tsx  AppLayout.tsx  ChatHistoryPanel.tsx  SettingsDialog.tsx  SettingsPage.tsx  Sidebar.tsx  WebViewContainer.tsx
src/components/ui/: dialog.tsx
src/hooks/: useCachedIcon.ts  useIconCache.ts  useKeyboardShortcuts.ts
src/lib/: icon-cache.ts  icon.ts  layout.ts
src/services/: backup.ts  content-host.ts  database.ts  import-export.ts  webview-dock-manager.ts
src/stores/: app-store.ts
src/types/: index.ts
tests/: setup.ts
tests/unit/: add-service-dialog.test.tsx  app-layout.test.tsx  app-store.test.ts  ci-next-version.test.ts  content-host.test.ts  database.test.ts  icon.test.ts  settings-page.test.tsx  sidebar.test.tsx  use-cached-icon.test.tsx
