[package]
name = "anychat"
version = "0.1.0"
description = "Multi-AI Chat Aggregator Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "anychat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
http = "1"
urlencoding = "2"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
regex = "1"
