[package]
name = "anychat"
version = "0.1.0"
description = "Multi-AI Chat Aggregator Desktop App"
authors = ["JS-banana <oooooohoney@163.com>"]
license = "MIT"
homepage = "https://github.com/JS-banana/anychat"
repository = "https://github.com/JS-banana/anychat"
edition = "2021"

[lib]
name = "anychat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
regex = "1"
